--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,18 @@
-<IfModule mod_rewrite.c>
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php [E=PATH_INFO:$1,QSA,PT,L]
-</IfModule>
+location / {
+   index  index.php index.html index.htm;
+         if (!-e $request_filename)
+         {
+            rewrite ^/(.*)$ /index.php?s=$1;
+           
+            #rewrite ^/subdir/(.*)$ /subdir/index.php?s=$1;
+         }
+    }
+    
+    location /api/ {
+         index  index.php index.html index.htm;
+         
+         if (!-e $request_filename)
+         {
+            rewrite ^/api/(.*)$ /api.php?s=$1;
+         }
+    }
