--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,21 +1,1 @@
-<<<<<<< HEAD
-=======
-location / {
-   index  index.php index.html index.htm;
-         if (!-e $request_filename)
-         {
-            rewrite ^/(.*)$ /index.php?s=$1;
-           
-            #rewrite ^/subdir/(.*)$ /subdir/index.php?s=$1;
-         }
-    }
-    
-    location /api/ {
-         index  index.php index.html index.htm;
-         
-         if (!-e $request_filename)
-         {
-            rewrite ^/api/(.*)$ /api.php?s=$1;
-         }
-    }
->>>>>>> 96136efd9bb995be563610a1b2fecadef107d016
+RewriteEngine on  RewriteCond %{REQUEST_FILENAME} !-d  RewriteCond %{REQUEST_FILENAME} !-f  RewriteRule ^(.*)$ index.php/$1 [L] 
